<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:transcriptMode="alwaysScroll"
    tools:context=".DeviceListActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="315dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:transcriptMode="alwaysScroll"
        tools:context=".DeviceListActivity">

    <TextView
        android:id="@+id/scanning..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:textStyle="italic" />

<!--    Progress bar when Scanning Devices-->
    <ProgressBar
        android:id="@+id/progress_scan_devices"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <!--    Title for Available Devices -->
    <TextView
        android:id="@+id/availableDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:layout_gravity="start"
        android:text="@string/str_available_devices"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stateDescriptionC"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/str_clickSearch"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="italic" />

<!--    List of Available Devices-->
    <ListView
        android:id="@+id/list_available_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbars="vertical"
        android:transcriptMode="alwaysScroll" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionBtnScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:src="@drawable/ic_search"
        android:layout_gravity="top|center"
        android:contentDescription="TODO" />


    </LinearLayout>

    <!--    Title for Paired Devices -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="@string/str_paired_devices"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/clickIfAlreadyPairedD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/str_clickIfAlreadyPaired"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="italic" />

    <!--    List of paired devices -->
    <ListView
        android:id="@+id/list_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbars="vertical"
        android:transcriptMode="alwaysScroll" />

    <TextView
        android:id="@+id/noPairedDevices"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textStyle="italic" />

</LinearLayout>
